tests/calculator/calculator.output
State 15 conflicts: 1 reduce/reduce


Grammar

    0 $accept: sentence_block $end

    1 sentence_block: expression ";" sentence_block
    2               | ";" sentence_block
    3               | expression ";"
    4               | expression
    5               | %empty

    6 expression: expression "+" term
    7           | expression "-" term
    8           | term

    9 term: term "*" factor
   10     | term "/" factor
   11     | factor

   12 factor: "integer"
   13       | "(" expression ")"
   14       | "-" factor


Terminals, with rules where they appear

$end (0) 0
error (256)
"+" (258) 6
"-" (259) 7 14
"*" (260) 9
"/" (261) 10
"(" (262) 13
")" (263) 13
";" (264) 1 2 3
"integer" (265) 12


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
sentence_block (12)
    on left: 1 2 3 4 5, on right: 0 1 2
expression (13)
    on left: 6 7 8, on right: 1 3 4 6 7 13
term (14)
    on left: 9 10 11, on right: 6 7 8 9 10
factor (15)
    on left: 12 13 14, on right: 9 10 11 14


State 0

    0 $accept: . sentence_block $end

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    ";"        shift, and go to state 3
    "integer"  shift, and go to state 4

    $default  reduce using rule 5 (sentence_block)

    sentence_block  go to state 5
    expression      go to state 6
    term            go to state 7
    factor          go to state 8


State 1

   14 factor: "-" . factor

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    "integer"  shift, and go to state 4

    factor  go to state 9


State 2

   13 factor: "(" . expression ")"

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    "integer"  shift, and go to state 4

    expression  go to state 10
    term        go to state 7
    factor      go to state 8


State 3

    2 sentence_block: ";" . sentence_block

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    ";"        shift, and go to state 3
    "integer"  shift, and go to state 4

    $default  reduce using rule 5 (sentence_block)

    sentence_block  go to state 11
    expression      go to state 6
    term            go to state 7
    factor          go to state 8


State 4

   12 factor: "integer" .

    $default  reduce using rule 12 (factor)


State 5

    0 $accept: sentence_block . $end

    $end  shift, and go to state 12


State 6

    1 sentence_block: expression . ";" sentence_block
    3               | expression . ";"
    4               | expression .
    6 expression: expression . "+" term
    7           | expression . "-" term

    "+"  shift, and go to state 13
    "-"  shift, and go to state 14
    ";"  shift, and go to state 15

    $default  reduce using rule 4 (sentence_block)


State 7

    8 expression: term .
    9 term: term . "*" factor
   10     | term . "/" factor

    "*"  shift, and go to state 16
    "/"  shift, and go to state 17

    $default  reduce using rule 8 (expression)


State 8

   11 term: factor .

    $default  reduce using rule 11 (term)


State 9

   14 factor: "-" factor .

    $default  reduce using rule 14 (factor)


State 10

    6 expression: expression . "+" term
    7           | expression . "-" term
   13 factor: "(" expression . ")"

    "+"  shift, and go to state 13
    "-"  shift, and go to state 14
    ")"  shift, and go to state 18


State 11

    2 sentence_block: ";" sentence_block .

    $default  reduce using rule 2 (sentence_block)


State 12

    0 $accept: sentence_block $end .

    $default  accept


State 13

    6 expression: expression "+" . term

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    "integer"  shift, and go to state 4

    term    go to state 19
    factor  go to state 8


State 14

    7 expression: expression "-" . term

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    "integer"  shift, and go to state 4

    term    go to state 20
    factor  go to state 8


State 15

    1 sentence_block: expression ";" . sentence_block
    3               | expression ";" .

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    ";"        shift, and go to state 3
    "integer"  shift, and go to state 4

    $end      reduce using rule 3 (sentence_block)
    $end      [reduce using rule 5 (sentence_block)]
    $default  reduce using rule 3 (sentence_block)

    sentence_block  go to state 21
    expression      go to state 6
    term            go to state 7
    factor          go to state 8


State 16

    9 term: term "*" . factor

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    "integer"  shift, and go to state 4

    factor  go to state 22


State 17

   10 term: term "/" . factor

    "-"        shift, and go to state 1
    "("        shift, and go to state 2
    "integer"  shift, and go to state 4

    factor  go to state 23


State 18

   13 factor: "(" expression ")" .

    $default  reduce using rule 13 (factor)


State 19

    6 expression: expression "+" term .
    9 term: term . "*" factor
   10     | term . "/" factor

    "*"  shift, and go to state 16
    "/"  shift, and go to state 17

    $default  reduce using rule 6 (expression)


State 20

    7 expression: expression "-" term .
    9 term: term . "*" factor
   10     | term . "/" factor

    "*"  shift, and go to state 16
    "/"  shift, and go to state 17

    $default  reduce using rule 7 (expression)


State 21

    1 sentence_block: expression ";" sentence_block .

    $default  reduce using rule 1 (sentence_block)


State 22

    9 term: term "*" factor .

    $default  reduce using rule 9 (term)


State 23

   10 term: term "/" factor .

    $default  reduce using rule 10 (term)
